# ChangeLog for app-i18n/jfbterm
# Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-i18n/jfbterm/ChangeLog,v 1.22 2005/01/01 14:31:14 eradicator Exp $

  16 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> jfbterm-0.4.6.ebuild:
  Stable on sparc

  29 Jun 2004; Tom Gall <tgall@gentoo.org> jfbterm-0.4.6.ebuild:
  stable on ppc64, bug#55322

  24 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.6.ebuild:
  Stable on x86 and ppc

*jfbterm-0.4.6 (30 May 2004)

  30 May 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.5.ebuild,
  jfbterm-0.4.6.ebuild:
  Version bumped. Marked 0.4.5 stable on ppc

  05 May 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.3.12.ebuild,
  jfbterm-0.3.16.ebuild, files/jfbterm.conf.extra, files/jfbterm.conf.xfree:
  Old ebuilds cleanup

  25 Apr 2004; Aron Griffis <agriffis@gentoo.org> jfbterm-0.3.12.ebuild:
  Add die following econf for bug 48950

  19 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.5.ebuild:
  Marked stable on x86

*jfbterm-0.4.5 (07 Mar 2004)

  07 Mar 2004; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.5.ebuild:
  Version bumped

  06 Nov 2003; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.3.16.ebuild,
  jfbterm-0.4.0.ebuild, jfbterm-0.4.1.ebuild, jfbterm-0.4.2.ebuild,
  jfbterm-0.4.3.ebuild, jfbterm-0.4.4.ebuild:
  Ebuilds cleanups. Marked 0.4.4 as stable.

*jfbterm-0.4.4 (30 Sep 2003)

  30 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.3.16.ebuild,
  jfbterm-0.4.0.ebuild, jfbterm-0.4.1.ebuild, jfbterm-0.4.2.ebuild,
  jfbterm-0.4.3.ebuild:
  Version bumped. Install terminfo entry by default.

*jfbterm-0.4.3 (16 Sep 2003)

  27 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.3.16.ebuild,
  jfbterm-0.4.3.ebuild:
  Marked stable for x86

  16 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.3.ebuild:
  Version bumped.

*jfbterm-0.4.2 (15 Sep 2003)

  15 Sep 2003; Mamoru KOMACHI <usata@gentoo.org> jfbterm-0.4.2.ebuild: