@@ -1,4 +1,16 @@
-MD5 997c06d94ca1d42f1f2aa7c9cc6b9eef ChangeLog 3458
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 75f1d879face90aeeb7cd5fe69493433 ChangeLog 3574
 MD5 6769d8bf2f7bebdb4bc9667a6c293c6d jfbterm-0.4.6.ebuild 1221
+MD5 94fd32542a569d45891c77a5c9ff65ee jfbterm-0.4.7.ebuild 1220
 MD5 86a8d60602760b24311a0309d18d677c metadata.xml 567
 MD5 bb97d8c90fa4d0cf64e59f738e1c502c files/digest-jfbterm-0.4.6 65
+MD5 d2f62b0cc5811c3b60fb9e1ff3bba429 files/digest-jfbterm-0.4.7 65
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.2.6 (GNU/Linux)
+
+iD8DBQFCHpxVVWNWqTUmv+0RAlkCAKCiPTxQ/wm/JwmeeCVKHfOfaBXaOQCdGsTm
+12pF+YUJPoI/D8f6HJJ/N9Q=
+=agzK
+-----END PGP SIGNATURE-----
