@@ -1,6 +1,11 @@
 # ChangeLog for app-i18n/jfbterm
 # Copyright 2000-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-i18n/jfbterm/ChangeLog,v 1.22 2005/01/01 14:31:14 eradicator Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-i18n/jfbterm/ChangeLog,v 1.23 2005/02/25 03:41:55 usata Exp $
+
+*jfbterm-0.4.7 (25 Feb 2005)
+
+  25 Feb 2005; Mamoru KOMACHI <usata@gentoo.org> +jfbterm-0.4.7.ebuild:
+  Version bumped.
 
   16 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> jfbterm-0.4.6.ebuild:
   Stable on sparc
